@@ -41,7 +41,7 @@ typedef struct menu_entry {
 } MenuEntry;
 
 
-MenuEntry *menu_read(MenuEntry *parent, const char *ame);
+MenuEntry *menu_read(MenuEntry *parent, const char *name);
 int menu_sock_send(MenuEntry *me, MenuEntry *parent, int sock);
 MenuEntry *menu_find_by_id(MenuEntry *me, int id);
 const char *menu_command(MenuEntry *me);
